# MeinekleineFreiheit

./: .gitignore  .replit  data.db  main.py  preise.db  pyproject.toml  requirements.txt
routes/: admin.py
static/: style.css
templates/: 404.html  Wohnmobile.html  authbank.html  bestandskunden.html  buchen.html  impressum.html  index.html  none.html  test.html
templates/admin/: admin.html  admin_base.html  admin_login.html  admin_login_fail.html  download_login.html  download_login_fail.html  downloadpreset.html  price.html
templates/test/: date.html  log.html  pdf_data.html  todo.html
